2023-05-22 Resolve bug for send email language wise and store data in SW6 product table

--- a/custom/plugins/ICTECHMigration/src/Resources/app/administration/src/module/ict-core-import/page/ict-core-import-config/ict-core-import-config.html.twig
+++ b/custom/plugins/ICTECHMigration/src/Resources/app/administration/src/module/ict-core-import/page/ict-core-import-config/ict-core-import-config.html.twig
@@ -48,7 +48,7 @@
                             </sw-card>
                             <sw-card>
                                 <sw-button
-                                    @click="importMainProduct"
+                                    @click="importMainProduct()"
                                     ref="ictCoreImportConfigContentMainProduct"
                                     id="ict_core_import_config_content_main_product"
                                     variant="primary"
@@ -57,6 +57,8 @@
                                     :isLoading="isLoading">
                                     {{ $tc('ict-core-import-config.detail.mainproduct') }}
                                 </sw-button>
+                                {{ importProductMessage }}
+
                             </sw-card>
                             <sw-card>
                                 <sw-button
