2023-05-24 Worked on storing Product additional data in SW6 custom fields

--- a/custom/plugins/ICTECHMigration/src/Resources/app/administration/src/module/ict-core-import/page/ict-core-import-config/ict-core-import-config.html.twig
+++ b/custom/plugins/ICTECHMigration/src/Resources/app/administration/src/module/ict-core-import/page/ict-core-import-config/ict-core-import-config.html.twig
@@ -31,7 +31,7 @@
                                     :square="false"
                                     :block="false"
                                     :isLoading="isLoading">
-                                    {{ $tc('ict-core-import-config.detail.propertyvalue') }}
+                                    {{ $tc('ict-core-import-config.detail.propertyValue') }}
                                 </sw-button>
                             </sw-card>
                             <sw-card>
@@ -56,7 +56,7 @@
                                     :square="false"
                                     :block="false"
                                     :isLoading="isLoading">
-                                    {{ $tc('ict-core-import-config.detail.mainproduct') }}
+                                    {{ $tc('ict-core-import-config.detail.mainProduct') }}
                                 </sw-button>
                                 {{ importProductMessage }}
 
@@ -69,7 +69,7 @@
                                     :square="false"
                                     :block="false"
                                     :isLoading="isLoading">
-                                    {{ $tc('ict-core-import-config.detail.productvariant') }}
+                                    {{ $tc('ict-core-import-config.detail.productVariant') }}
                                 </sw-button>
                             </sw-card>
                         {% endblock %}
