2023-05-30 create Variant controller for import Variant product

--- a/custom/plugins/ICTECHMigration/src/Resources/app/administration/src/module/ict-core-import/page/ict-core-import-config/ict-core-import-config.html.twig
+++ b/custom/plugins/ICTECHMigration/src/Resources/app/administration/src/module/ict-core-import/page/ict-core-import-config/ict-core-import-config.html.twig
@@ -76,6 +76,7 @@
                             </sw-card>
                             <sw-card>
                                 <sw-button
+                                    @click="importVariantProduct()"
                                     ref="ictCoreImportConfigContentProductVariant"
                                     id="ict_core_import_config_content_product_variant"
                                     variant="primary"
@@ -84,6 +85,7 @@
                                     :isLoading="isLoading">
                                     {{ $tc('ict-core-import-config.detail.productVariant') }}
                                 </sw-button>
+                                {{ importVariantMessage }}
                             </sw-card>
                         {% endblock %}
                         </sw-card>
