2023-05-31 variant product import and resolve errors

--- a/custom/plugins/ICTECHMigration/src/Resources/app/administration/src/module/ict-core-import/page/ict-core-import-config/ict-core-import-config.html.twig
+++ b/custom/plugins/ICTECHMigration/src/Resources/app/administration/src/module/ict-core-import/page/ict-core-import-config/ict-core-import-config.html.twig
@@ -55,7 +55,7 @@
                                     variant="primary"
                                     :square="false"
                                     :block="false"
-                                    :isLoading="isLoading">
+                                    :isLoading="isCategoryLoading">
                                     {{ $tc('ict-core-import-config.detail.category') }}
                                 </sw-button>
                                 {{ importCategoryMessage }}
@@ -68,7 +68,7 @@
                                     variant="primary"
                                     :square="false"
                                     :block="false"
-                                    :isLoading="isLoading">
+                                    :isLoading="isProductLoading">
                                     {{ $tc('ict-core-import-config.detail.mainProduct') }}
                                 </sw-button>
                                 {{ importProductMessage }}
@@ -82,7 +82,7 @@
                                     variant="primary"
                                     :square="false"
                                     :block="false"
-                                    :isLoading="isLoading">
+                                    :isLoading="isVariantLoading">
                                     {{ $tc('ict-core-import-config.detail.productVariant') }}
                                 </sw-button>
                                 {{ importVariantMessage }}
