2023-06-05  Added new configuration fields in the plugin for storing imported category count, main product count, and variant product count

--- a/custom/plugins/ICTECHMigration/src/Resources/app/administration/src/module/ict-core-import/page/ict-core-import-config/ict-core-import-config.html.twig
+++ b/custom/plugins/ICTECHMigration/src/Resources/app/administration/src/module/ict-core-import/page/ict-core-import-config/ict-core-import-config.html.twig
@@ -55,7 +55,9 @@
                                     variant="primary"
                                     :square="false"
                                     :block="false"
-                                    :isLoading="isCategoryLoading">
+                                    :isLoading="isCategoryLoading"
+                                    :disabled="isProductLoading || isVariantLoading"
+                                >
                                     {{ $tc('ict-core-import-config.detail.category') }}
                                 </sw-button>
                                 {{ importCategoryMessage }}
@@ -68,7 +70,9 @@
                                     variant="primary"
                                     :square="false"
                                     :block="false"
-                                    :isLoading="isProductLoading">
+                                    :isLoading="isProductLoading"
+                                    :disabled="isCategoryLoading || isVariantLoading"
+                                >
                                     {{ $tc('ict-core-import-config.detail.mainProduct') }}
                                 </sw-button>
                                 {{ importProductMessage }}
@@ -82,7 +86,9 @@
                                     variant="primary"
                                     :square="false"
                                     :block="false"
-                                    :isLoading="isVariantLoading">
+                                    :isLoading="isVariantLoading"
+                                    :disabled="isCategoryLoading || isProductLoading"
+                                >
                                     {{ $tc('ict-core-import-config.detail.productVariant') }}
                                 </sw-button>
                                 {{ importVariantMessage }}
