2023-06-06 Worked on get and set last import category count, product count, variant product count Database name field in Plugin configuration

--- a/custom/plugins/ICTECHMigration/src/Resources/app/administration/src/module/ict-core-import/page/ict-core-import-config/ict-core-import-config.html.twig
+++ b/custom/plugins/ICTECHMigration/src/Resources/app/administration/src/module/ict-core-import/page/ict-core-import-config/ict-core-import-config.html.twig
@@ -48,6 +48,7 @@
 {#                                {{ incrementalValue }}#}
 {#                            </sw-card>#}
                             <sw-card>
+                                <p class="sw_text-info__info">{{ $tc('ict-core-import-config.detail.categoryText') }}</p>
                                 <sw-button
                                     @click="importCategory()"
                                     ref="ictCoreImportConfigContentCategory"
@@ -63,6 +64,7 @@
                                 {{ importCategoryMessage }}
                             </sw-card>
                             <sw-card>
+                                <p class="sw_text-info__info">{{ $tc('ict-core-import-config.detail.mainProductText') }}</p>
                                 <sw-button
                                     @click="importMainProduct()"
                                     ref="ictCoreImportConfigContentMainProduct"
@@ -79,6 +81,7 @@
 
                             </sw-card>
                             <sw-card>
+                                <p class="sw_text-info__info">{{ $tc('ict-core-import-config.detail.productVariantText') }}</p>
                                 <sw-button
                                     @click="importVariantProduct()"
                                     ref="ictCoreImportConfigContentProductVariant"
